<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:padding="16dp">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/amount_editText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/carboHydrateReferenceValue_editText"
            android:nextFocusDown="@id/be_switch" android:hint="@string/amount"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/carboHydrateReferenceValue_editText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/referenceValue_editText"
            android:hint="@string/carboHydrateReferenceValue" android:nextFocusDown="@id/amount_editText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/referenceValue_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/referenceValue"
            android:textSize="18sp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            tools:nextFocusDown="@id/carboHydrateReferenceValue_editText" android:text="@string/DefaultReferenceValue"
            android:selectAllOnFocus="false"/>
    <Switch
            android:text="@string/switchBE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/be_switch" app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/amount_editText"
            android:switchMinWidth="50dp"
            tools:checked="false" android:nextFocusDown="@id/compute_button"
            android:checked="true"/>
    <Button
            android:text="@string/compute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/compute_button" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/be_switch" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>